// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Filter renders correctly 1`] = `
<div
  class="kd-filter"
>
  <header
    class="kd-filter-header"
  >
    <h3
      class="kd-filter-header-title"
    >
      Filter Test
    </h3>
    <div
      class="kd-filter-header-condition"
    >
      <span
        class="kd-filter-header-condition-label"
      >
        筛选条件
      </span>
      <div
        class="kd-space kd-space-horizontal kd-space-align-center kd-space-wrap"
        style="--cgap:4px;--rgap:4px"
      />
    </div>
    <div
      class="kd-quick-search kd-filter-header-search"
    >
      <span
        class="kd-quick-search-prefix"
      >
        <i
          class="kdicon kdicon-search"
        />
      </span>
      <div
        class="kd-quick-search-selector"
      >
        <div
          class="kd-quick-search-selection-overflow"
        >
          <span
            class="kd-quick-search-selection-placeholder"
          >
            请输入需要搜索的内容
          </span>
          <div
            class="kd-quick-search-selection-search"
            style="width:4px"
          >
            <input
              class="kd-quick-search-input"
              value=""
            />
            <span
              class="kd-quick-search-selection-search-mirror"
            >
               
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="kd-filter-header-handle"
    >
      展开过滤 
      <i
        class="kdicon kdicon-arrow-down"
      />
    </div>
  </header>
  <div
    class="kd-filter-body"
  >
    <div
      class="kd-space kd-filter-body-tabs kd-space-horizontal kd-space-align-center"
      style="--cgap:12px"
    >
      <span
        class="kd-filter-body-tabs-item active"
      >
        常用条件
      </span>
      <span
        class="kd-filter-body-tabs-split"
      />
      <span
        class="kd-filter-body-tabs-item"
      >
        方案查询
      </span>
    </div>
    <ul
      class="kd-filter-body-conditions active"
    />
    <ul
      class="kd-filter-body-scheme"
    >
      <li>
        <span
          class="kd-filter-body-scheme-label"
        >
          常用方案:
        </span>
        <ol
          class="kd-filter-body-scheme-list"
        />
      </li>
      <li>
        <span
          class="kd-filter-body-scheme-label"
        >
          高级查询：
        </span>
        <ol
          class="kd-filter-body-scheme-detail"
        >
          <li>
            <button
              class="kd-btn kd-btn-primary kd-btn-size-small kd-btn-background-ghost"
              click-animating-wave="false"
              type="button"
            >
              <i
                class="kdicon kdicon-add"
                style="vertical-align:top;margin-right:5px"
              />
              添加条件
            </button>
          </li>
        </ol>
      </li>
    </ul>
  </div>
</div>
`;

exports[`Filter renders correctly 2`] = `
<div
  class="kd-filter"
>
  <header
    class="kd-filter-header"
  >
    <h3
      class="kd-filter-header-title"
    >
      Filter Test
    </h3>
    <div
      class="kd-filter-header-condition"
    >
      <span
        class="kd-filter-header-condition-label"
      >
        筛选条件
      </span>
      <div
        class="kd-space kd-space-horizontal kd-space-align-center kd-space-wrap"
        style="--cgap:4px;--rgap:4px"
      />
    </div>
    <div
      class="kd-quick-search kd-filter-header-search"
    >
      <span
        class="kd-quick-search-prefix"
      >
        <i
          class="kdicon kdicon-search"
        />
      </span>
      <div
        class="kd-quick-search-selector"
      >
        <div
          class="kd-quick-search-selection-overflow"
        >
          <span
            class="kd-quick-search-selection-placeholder"
          >
            请输入需要搜索的内容
          </span>
          <div
            class="kd-quick-search-selection-search"
            style="width:4px"
          >
            <input
              class="kd-quick-search-input"
              value=""
            />
            <span
              class="kd-quick-search-selection-search-mirror"
            >
               
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="kd-filter-header-handle"
    >
      展开过滤 
      <i
        class="kdicon kdicon-arrow-down"
      />
    </div>
  </header>
  <div
    class="kd-filter-body"
  >
    <div
      class="kd-space kd-filter-body-tabs kd-space-horizontal kd-space-align-center"
      style="--cgap:12px"
    >
      <span
        class="kd-filter-body-tabs-item active"
      >
        常用条件
      </span>
      <span
        class="kd-filter-body-tabs-split"
      />
      <span
        class="kd-filter-body-tabs-item"
      >
        方案查询
      </span>
    </div>
    <ul
      class="kd-filter-body-conditions active"
    >
      <li
        class="kd-filter-body-condition"
      >
        <span
          class="kd-filter-body-condition-label"
        >
          组织:
        </span>
        <div
          class="kd-filter-body-condition-options"
        >
          <span
            class="kd-filter-body-condition-option"
            title="环球日化深圳销售部"
          >
            环球日化深圳销售部
          </span>
          <span
            class="kd-filter-body-condition-option"
            title="用户体验部"
          >
            用户体验部
          </span>
          <span
            class="kd-filter-body-condition-option"
            title="前端开发项目部"
          >
            前端开发项目部
          </span>
          <span
            class="kd-filter-body-condition-option"
            title="环球集团广州销售部"
          >
            环球集团广州销售部
          </span>
        </div>
        <div
          class="kd-filter-body-condition-addition"
        />
      </li>
      <li
        class="kd-filter-body-condition"
      >
        <span
          class="kd-filter-body-condition-label"
        >
          缺陷状态:
        </span>
        <div
          class="kd-filter-body-condition-options"
        >
          <span
            class="kd-filter-body-condition-option active"
          >
            不限
          </span>
          <span
            class="kd-filter-body-condition-option"
            title="● 计划"
          >
            ● 计划
          </span>
          <span
            class="kd-filter-body-condition-option"
            title="● 待修复"
          >
            ● 待修复
          </span>
          <span
            class="kd-filter-body-condition-option"
            title="● 阻塞"
          >
            ● 阻塞
          </span>
          <span
            class="kd-filter-body-condition-option"
            title="● 修复中"
          >
            ● 修复中
          </span>
          <span
            class="kd-filter-body-condition-option"
            title="● 修复完成"
          >
            ● 修复完成
          </span>
          <span
            class="kd-filter-body-condition-option"
            title="● 验证通过"
          >
            ● 验证通过
          </span>
          <span
            class="kd-filter-body-condition-option"
            title="● 失效"
          >
            ● 失效
          </span>
          <span
            class="kd-filter-body-condition-option"
            title="● 下版处理"
          >
            ● 下版处理
          </span>
          <span
            class="kd-filter-body-condition-option"
            title="status9"
          >
            status9
          </span>
          <span
            class="kd-filter-body-condition-option"
          />
          <span
            class="kd-filter-body-condition-option"
            title="● 已转需求"
          >
            ● 已转需求
          </span>
        </div>
        <div
          class="kd-filter-body-condition-addition"
        />
      </li>
      <li
        class="kd-filter-body-condition"
      >
        <span
          class="kd-filter-body-condition-label"
        >
          项目组:
        </span>
        <div
          class="kd-filter-body-condition-options"
        >
          <span
            class="kd-filter-body-condition-option"
            title="DataOne大数据平台项目组"
          >
            DataOne大数据平台项目组
          </span>
          <span
            class="kd-filter-body-condition-option"
            title="数据智能项目组"
          >
            数据智能项目组
          </span>
          <span
            class="kd-filter-body-condition-option"
            title="IKD"
          >
            IKD
          </span>
          <span
            class="kd-filter-body-condition-option"
            title="统一平台"
          >
            统一平台
          </span>
          <span
            class="kd-filter-body-condition-option"
            title="KDesign-前端组件库"
          >
            KDesign-前端组件库
          </span>
          <span
            class="kd-filter-body-condition-option"
            title="流程服务项目组"
          >
            流程服务项目组
          </span>
          <span
            class="kd-filter-body-condition-option"
            title="云架构项目组"
          >
            云架构项目组
          </span>
          <span
            class="kd-filter-body-condition-option"
            title="轻分析项目组"
          >
            轻分析项目组
          </span>
          <span
            class="kd-filter-body-condition-option"
            title="前端技术项目组"
          >
            前端技术项目组
          </span>
          <span
            class="kd-filter-body-condition-option"
            title="基础数据项目组"
          >
            基础数据项目组
          </span>
          <span
            class="kd-filter-body-condition-option"
            title="集成服务项目组"
          >
            集成服务项目组
          </span>
          <span
            class="kd-filter-body-condition-option"
            title="税务管理项目组"
          >
            税务管理项目组
          </span>
          <span
            class="kd-filter-body-condition-option"
            title="产品总监项目组"
          >
            产品总监项目组
          </span>
          <span
            class="kd-filter-body-condition-option"
            title="发票云项目组"
          >
            发票云项目组
          </span>
          <span
            class="kd-filter-body-condition-option"
            title="物联网应用项目组"
          >
            物联网应用项目组
          </span>
          <span
            class="kd-filter-body-condition-option"
            title="IIoT平台项目组"
          >
            IIoT平台项目组
          </span>
          <span
            class="kd-filter-body-condition-option"
            title="项目赋能组"
          >
            项目赋能组
          </span>
          <span
            class="kd-filter-body-condition-option"
            title="渠道云项目组"
          >
            渠道云项目组
          </span>
          <span
            class="kd-filter-body-condition-option"
            title="电商云项目组"
          >
            电商云项目组
          </span>
          <span
            class="kd-filter-body-condition-option"
            title="开放平台项目组"
          >
            开放平台项目组
          </span>
        </div>
        <div
          class="kd-filter-body-condition-addition"
        />
      </li>
      <li
        class="kd-filter-body-condition"
      >
        <span
          class="kd-filter-body-condition-label"
        >
          日期:
        </span>
        <div
          class="kd-filter-body-condition-options"
        >
          <span
            class="kd-filter-body-condition-option active"
          >
            不限
          </span>
          <span
            class="kd-filter-body-condition-option"
            title="今天"
          >
            今天
          </span>
          <span
            class="kd-filter-body-condition-option"
            title="本周"
          >
            本周
          </span>
          <span
            class="kd-filter-body-condition-option"
            title="本月"
          >
            本月
          </span>
          <span
            class="kd-filter-body-condition-option"
            title="近三个月"
          >
            近三个月
          </span>
          <span
            class="kd-filter-body-condition-option"
            title="近一年"
          >
            近一年
          </span>
          <span
            class="kd-filter-body-condition-option"
            title="自定义"
          >
            自定义
          </span>
          <span
            class="kd-filter-body-condition-option-customer"
          >
            <div
              class="kd-date-picker kd-date-picker-range kd-date-picker-middle"
              style="margin:-4px 0"
            >
              <div
                class="kd-date-picker-input kd-date-picker-input-active kd-date-picker-input-middle"
              >
                <input
                  placeholder="开始日期"
                  readonly=""
                  size="12"
                  value=""
                />
              </div>
              <div
                class="kd-date-picker-range-separator"
              >
                ~
              </div>
              <div
                class="kd-date-picker-input kd-date-picker-input-middle"
              >
                <input
                  placeholder="结束日期"
                  readonly=""
                  size="12"
                  value=""
                />
              </div>
              <div
                class="kd-date-picker-active-bar"
                style="left:-10px;width:0;position:absolute"
              />
              <span
                class="kd-date-picker-suffix"
              >
                <i
                  class="kdicon kdicon-date"
                />
              </span>
            </div>
          </span>
        </div>
        <div
          class="kd-filter-body-condition-addition"
        />
      </li>
    </ul>
    <ul
      class="kd-filter-body-scheme"
    >
      <li>
        <span
          class="kd-filter-body-scheme-label"
        >
          常用方案:
        </span>
        <ol
          class="kd-filter-body-scheme-list"
        />
      </li>
      <li>
        <span
          class="kd-filter-body-scheme-label"
        >
          高级查询：
        </span>
        <ol
          class="kd-filter-body-scheme-detail"
        >
          <li>
            <button
              class="kd-btn kd-btn-primary kd-btn-size-small kd-btn-background-ghost"
              click-animating-wave="false"
              type="button"
            >
              <i
                class="kdicon kdicon-add"
                style="vertical-align:top;margin-right:5px"
              />
              添加条件
            </button>
          </li>
        </ol>
      </li>
    </ul>
  </div>
</div>
`;

exports[`Filter renders correctly 3`] = `
<div
  class="kd-filter"
>
  <header
    class="kd-filter-header"
  >
    <h3
      class="kd-filter-header-title"
    >
      Filter Test
    </h3>
    <div
      class="kd-filter-header-condition"
    >
      <span
        class="kd-filter-header-condition-label"
      >
        筛选条件
      </span>
      <div
        class="kd-space kd-space-horizontal kd-space-align-center kd-space-wrap"
        style="--cgap:4px;--rgap:4px"
      />
    </div>
    <div
      class="kd-quick-search kd-filter-header-search"
    >
      <span
        class="kd-quick-search-prefix"
      >
        <i
          class="kdicon kdicon-search"
        />
      </span>
      <div
        class="kd-quick-search-selector"
      >
        <div
          class="kd-quick-search-selection-overflow"
        >
          <span
            class="kd-quick-search-selection-placeholder"
          >
            请输入需要搜索的内容
          </span>
          <div
            class="kd-quick-search-selection-search"
            style="width:4px"
          >
            <input
              class="kd-quick-search-input"
              value=""
            />
            <span
              class="kd-quick-search-selection-search-mirror"
            >
               
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="kd-filter-header-handle"
    >
      展开过滤 
      <i
        class="kdicon kdicon-arrow-down"
      />
    </div>
  </header>
  <div
    class="kd-filter-body"
  >
    <div
      class="kd-space kd-filter-body-tabs kd-space-horizontal kd-space-align-center"
      style="--cgap:12px"
    >
      <span
        class="kd-filter-body-tabs-item active"
      >
        常用条件
      </span>
      <span
        class="kd-filter-body-tabs-split"
      />
      <span
        class="kd-filter-body-tabs-item"
      >
        方案查询
      </span>
    </div>
    <ul
      class="kd-filter-body-conditions active"
    >
      <li
        class="kd-filter-body-condition"
      >
        <span
          class="kd-filter-body-condition-label"
        >
          组织:
        </span>
        <div
          class="kd-filter-body-condition-options"
        >
          <span
            class="kd-filter-body-condition-option"
            title="环球日化深圳销售部"
          >
            环球日化深圳销售部
          </span>
          <span
            class="kd-filter-body-condition-option"
            title="用户体验部"
          >
            用户体验部
          </span>
          <span
            class="kd-filter-body-condition-option"
            title="前端开发项目部"
          >
            前端开发项目部
          </span>
          <span
            class="kd-filter-body-condition-option"
            title="环球集团广州销售部"
          >
            环球集团广州销售部
          </span>
        </div>
        <div
          class="kd-filter-body-condition-addition"
        />
      </li>
      <li
        class="kd-filter-body-condition"
      >
        <span
          class="kd-filter-body-condition-label"
        >
          缺陷状态:
        </span>
        <div
          class="kd-filter-body-condition-options"
        >
          <span
            class="kd-filter-body-condition-option active"
          >
            不限
          </span>
          <span
            class="kd-filter-body-condition-option"
            title="● 计划"
          >
            ● 计划
          </span>
          <span
            class="kd-filter-body-condition-option"
            title="● 待修复"
          >
            ● 待修复
          </span>
          <span
            class="kd-filter-body-condition-option"
            title="● 阻塞"
          >
            ● 阻塞
          </span>
          <span
            class="kd-filter-body-condition-option"
            title="● 修复中"
          >
            ● 修复中
          </span>
          <span
            class="kd-filter-body-condition-option"
            title="● 修复完成"
          >
            ● 修复完成
          </span>
          <span
            class="kd-filter-body-condition-option"
            title="● 验证通过"
          >
            ● 验证通过
          </span>
          <span
            class="kd-filter-body-condition-option"
            title="● 失效"
          >
            ● 失效
          </span>
          <span
            class="kd-filter-body-condition-option"
            title="● 下版处理"
          >
            ● 下版处理
          </span>
          <span
            class="kd-filter-body-condition-option"
            title="status9"
          >
            status9
          </span>
          <span
            class="kd-filter-body-condition-option"
          />
          <span
            class="kd-filter-body-condition-option"
            title="● 已转需求"
          >
            ● 已转需求
          </span>
        </div>
        <div
          class="kd-filter-body-condition-addition"
        />
      </li>
      <li
        class="kd-filter-body-condition"
      >
        <span
          class="kd-filter-body-condition-label"
        >
          项目组:
        </span>
        <div
          class="kd-filter-body-condition-options"
        >
          <span
            class="kd-filter-body-condition-option"
            title="DataOne大数据平台项目组"
          >
            DataOne大数据平台项目组
          </span>
          <span
            class="kd-filter-body-condition-option"
            title="数据智能项目组"
          >
            数据智能项目组
          </span>
          <span
            class="kd-filter-body-condition-option"
            title="IKD"
          >
            IKD
          </span>
          <span
            class="kd-filter-body-condition-option"
            title="统一平台"
          >
            统一平台
          </span>
          <span
            class="kd-filter-body-condition-option"
            title="KDesign-前端组件库"
          >
            KDesign-前端组件库
          </span>
          <span
            class="kd-filter-body-condition-option"
            title="流程服务项目组"
          >
            流程服务项目组
          </span>
          <span
            class="kd-filter-body-condition-option"
            title="云架构项目组"
          >
            云架构项目组
          </span>
          <span
            class="kd-filter-body-condition-option"
            title="轻分析项目组"
          >
            轻分析项目组
          </span>
          <span
            class="kd-filter-body-condition-option"
            title="前端技术项目组"
          >
            前端技术项目组
          </span>
          <span
            class="kd-filter-body-condition-option"
            title="基础数据项目组"
          >
            基础数据项目组
          </span>
          <span
            class="kd-filter-body-condition-option"
            title="集成服务项目组"
          >
            集成服务项目组
          </span>
          <span
            class="kd-filter-body-condition-option"
            title="税务管理项目组"
          >
            税务管理项目组
          </span>
          <span
            class="kd-filter-body-condition-option"
            title="产品总监项目组"
          >
            产品总监项目组
          </span>
          <span
            class="kd-filter-body-condition-option"
            title="发票云项目组"
          >
            发票云项目组
          </span>
          <span
            class="kd-filter-body-condition-option"
            title="物联网应用项目组"
          >
            物联网应用项目组
          </span>
          <span
            class="kd-filter-body-condition-option"
            title="IIoT平台项目组"
          >
            IIoT平台项目组
          </span>
          <span
            class="kd-filter-body-condition-option"
            title="项目赋能组"
          >
            项目赋能组
          </span>
          <span
            class="kd-filter-body-condition-option"
            title="渠道云项目组"
          >
            渠道云项目组
          </span>
          <span
            class="kd-filter-body-condition-option"
            title="电商云项目组"
          >
            电商云项目组
          </span>
          <span
            class="kd-filter-body-condition-option"
            title="开放平台项目组"
          >
            开放平台项目组
          </span>
        </div>
        <div
          class="kd-filter-body-condition-addition"
        />
      </li>
      <li
        class="kd-filter-body-condition"
      >
        <span
          class="kd-filter-body-condition-label"
        >
          日期:
        </span>
        <div
          class="kd-filter-body-condition-options"
        >
          <span
            class="kd-filter-body-condition-option active"
          >
            不限
          </span>
          <span
            class="kd-filter-body-condition-option"
            title="今天"
          >
            今天
          </span>
          <span
            class="kd-filter-body-condition-option"
            title="本周"
          >
            本周
          </span>
          <span
            class="kd-filter-body-condition-option"
            title="本月"
          >
            本月
          </span>
          <span
            class="kd-filter-body-condition-option"
            title="近三个月"
          >
            近三个月
          </span>
          <span
            class="kd-filter-body-condition-option"
            title="近一年"
          >
            近一年
          </span>
          <span
            class="kd-filter-body-condition-option"
            title="自定义"
          >
            自定义
          </span>
          <span
            class="kd-filter-body-condition-option-customer"
          >
            <div
              class="kd-date-picker kd-date-picker-range kd-date-picker-middle"
              style="margin:-4px 0"
            >
              <div
                class="kd-date-picker-input kd-date-picker-input-active kd-date-picker-input-middle"
              >
                <input
                  placeholder="开始日期"
                  readonly=""
                  size="12"
                  value=""
                />
              </div>
              <div
                class="kd-date-picker-range-separator"
              >
                ~
              </div>
              <div
                class="kd-date-picker-input kd-date-picker-input-middle"
              >
                <input
                  placeholder="结束日期"
                  readonly=""
                  size="12"
                  value=""
                />
              </div>
              <div
                class="kd-date-picker-active-bar"
                style="left:-10px;width:0;position:absolute"
              />
              <span
                class="kd-date-picker-suffix"
              >
                <i
                  class="kdicon kdicon-date"
                />
              </span>
            </div>
          </span>
        </div>
        <div
          class="kd-filter-body-condition-addition"
        />
      </li>
    </ul>
    <ul
      class="kd-filter-body-scheme"
    >
      <li>
        <span
          class="kd-filter-body-scheme-label"
        >
          常用方案:
        </span>
        <ol
          class="kd-filter-body-scheme-list"
        >
          <li
            class="kd-filter-body-scheme-item"
          >
            我创建的
          </li>
          <li
            class="kd-filter-body-scheme-item"
          >
            我处理的
          </li>
          <li
            class="kd-filter-body-scheme-item"
          >
            我修复的
          </li>
          <li
            class="kd-filter-body-scheme-item"
          >
            我验证的
          </li>
        </ol>
      </li>
      <li>
        <span
          class="kd-filter-body-scheme-label"
        >
          高级查询：
        </span>
        <ol
          class="kd-filter-body-scheme-detail"
        >
          <li>
            <button
              class="kd-btn kd-btn-primary kd-btn-size-small kd-btn-background-ghost"
              click-animating-wave="false"
              type="button"
            >
              <i
                class="kdicon kdicon-add"
                style="vertical-align:top;margin-right:5px"
              />
              添加条件
            </button>
          </li>
        </ol>
      </li>
    </ul>
  </div>
</div>
`;

exports[`Filter renders correctly 4`] = `
<div
  class="kd-filter"
>
  <header
    class="kd-filter-header"
  >
    <h3
      class="kd-filter-header-title"
    >
      Filter Test
    </h3>
    <div
      class="kd-filter-header-condition"
    >
      <span
        class="kd-filter-header-condition-label"
      >
        筛选条件
      </span>
      <div
        class="kd-space kd-space-horizontal kd-space-align-center kd-space-wrap"
        style="--cgap:4px;--rgap:4px"
      />
    </div>
    <div
      class="kd-quick-search kd-filter-header-search"
    >
      <span
        class="kd-quick-search-prefix"
      >
        <i
          class="kdicon kdicon-search"
        />
      </span>
      <div
        class="kd-quick-search-selector"
      >
        <div
          class="kd-quick-search-selection-overflow"
        >
          <span
            class="kd-quick-search-selection-placeholder"
          >
            请输入需要搜索的内容
          </span>
          <div
            class="kd-quick-search-selection-search"
            style="width:4px"
          >
            <input
              class="kd-quick-search-input"
              value=""
            />
            <span
              class="kd-quick-search-selection-search-mirror"
            >
               
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="kd-filter-header-handle"
    >
      展开过滤 
      <i
        class="kdicon kdicon-arrow-down"
      />
    </div>
  </header>
  <div
    class="kd-filter-body"
  >
    <div
      class="kd-space kd-filter-body-tabs kd-space-horizontal kd-space-align-center"
      style="--cgap:12px"
    >
      <span
        class="kd-filter-body-tabs-item active"
      >
        常用条件
      </span>
      <span
        class="kd-filter-body-tabs-split"
      />
      <span
        class="kd-filter-body-tabs-item"
      >
        方案查询
      </span>
    </div>
    <ul
      class="kd-filter-body-conditions active"
    >
      <li
        class="kd-filter-body-condition"
      >
        <span
          class="kd-filter-body-condition-label"
        >
          组织:
        </span>
        <div
          class="kd-filter-body-condition-options"
        >
          <span
            class="kd-filter-body-condition-option"
            title="环球日化深圳销售部"
          >
            环球日化深圳销售部
          </span>
          <span
            class="kd-filter-body-condition-option"
            title="用户体验部"
          >
            用户体验部
          </span>
          <span
            class="kd-filter-body-condition-option"
            title="前端开发项目部"
          >
            前端开发项目部
          </span>
          <span
            class="kd-filter-body-condition-option"
            title="环球集团广州销售部"
          >
            环球集团广州销售部
          </span>
        </div>
        <div
          class="kd-filter-body-condition-addition"
        />
      </li>
      <li
        class="kd-filter-body-condition"
      >
        <span
          class="kd-filter-body-condition-label"
        >
          缺陷状态:
        </span>
        <div
          class="kd-filter-body-condition-options"
        >
          <span
            class="kd-filter-body-condition-option active"
          >
            不限
          </span>
          <span
            class="kd-filter-body-condition-option"
            title="● 计划"
          >
            ● 计划
          </span>
          <span
            class="kd-filter-body-condition-option"
            title="● 待修复"
          >
            ● 待修复
          </span>
          <span
            class="kd-filter-body-condition-option"
            title="● 阻塞"
          >
            ● 阻塞
          </span>
          <span
            class="kd-filter-body-condition-option"
            title="● 修复中"
          >
            ● 修复中
          </span>
          <span
            class="kd-filter-body-condition-option"
            title="● 修复完成"
          >
            ● 修复完成
          </span>
          <span
            class="kd-filter-body-condition-option"
            title="● 验证通过"
          >
            ● 验证通过
          </span>
          <span
            class="kd-filter-body-condition-option"
            title="● 失效"
          >
            ● 失效
          </span>
          <span
            class="kd-filter-body-condition-option"
            title="● 下版处理"
          >
            ● 下版处理
          </span>
          <span
            class="kd-filter-body-condition-option"
            title="status9"
          >
            status9
          </span>
          <span
            class="kd-filter-body-condition-option"
          />
          <span
            class="kd-filter-body-condition-option"
            title="● 已转需求"
          >
            ● 已转需求
          </span>
        </div>
        <div
          class="kd-filter-body-condition-addition"
        />
      </li>
      <li
        class="kd-filter-body-condition"
      >
        <span
          class="kd-filter-body-condition-label"
        >
          项目组:
        </span>
        <div
          class="kd-filter-body-condition-options"
        >
          <span
            class="kd-filter-body-condition-option"
            title="DataOne大数据平台项目组"
          >
            DataOne大数据平台项目组
          </span>
          <span
            class="kd-filter-body-condition-option"
            title="数据智能项目组"
          >
            数据智能项目组
          </span>
          <span
            class="kd-filter-body-condition-option"
            title="IKD"
          >
            IKD
          </span>
          <span
            class="kd-filter-body-condition-option"
            title="统一平台"
          >
            统一平台
          </span>
          <span
            class="kd-filter-body-condition-option"
            title="KDesign-前端组件库"
          >
            KDesign-前端组件库
          </span>
          <span
            class="kd-filter-body-condition-option"
            title="流程服务项目组"
          >
            流程服务项目组
          </span>
          <span
            class="kd-filter-body-condition-option"
            title="云架构项目组"
          >
            云架构项目组
          </span>
          <span
            class="kd-filter-body-condition-option"
            title="轻分析项目组"
          >
            轻分析项目组
          </span>
          <span
            class="kd-filter-body-condition-option"
            title="前端技术项目组"
          >
            前端技术项目组
          </span>
          <span
            class="kd-filter-body-condition-option"
            title="基础数据项目组"
          >
            基础数据项目组
          </span>
          <span
            class="kd-filter-body-condition-option"
            title="集成服务项目组"
          >
            集成服务项目组
          </span>
          <span
            class="kd-filter-body-condition-option"
            title="税务管理项目组"
          >
            税务管理项目组
          </span>
          <span
            class="kd-filter-body-condition-option"
            title="产品总监项目组"
          >
            产品总监项目组
          </span>
          <span
            class="kd-filter-body-condition-option"
            title="发票云项目组"
          >
            发票云项目组
          </span>
          <span
            class="kd-filter-body-condition-option"
            title="物联网应用项目组"
          >
            物联网应用项目组
          </span>
          <span
            class="kd-filter-body-condition-option"
            title="IIoT平台项目组"
          >
            IIoT平台项目组
          </span>
          <span
            class="kd-filter-body-condition-option"
            title="项目赋能组"
          >
            项目赋能组
          </span>
          <span
            class="kd-filter-body-condition-option"
            title="渠道云项目组"
          >
            渠道云项目组
          </span>
          <span
            class="kd-filter-body-condition-option"
            title="电商云项目组"
          >
            电商云项目组
          </span>
          <span
            class="kd-filter-body-condition-option"
            title="开放平台项目组"
          >
            开放平台项目组
          </span>
        </div>
        <div
          class="kd-filter-body-condition-addition"
        />
      </li>
      <li
        class="kd-filter-body-condition"
      >
        <span
          class="kd-filter-body-condition-label"
        >
          日期:
        </span>
        <div
          class="kd-filter-body-condition-options"
        >
          <span
            class="kd-filter-body-condition-option active"
          >
            不限
          </span>
          <span
            class="kd-filter-body-condition-option"
            title="今天"
          >
            今天
          </span>
          <span
            class="kd-filter-body-condition-option"
            title="本周"
          >
            本周
          </span>
          <span
            class="kd-filter-body-condition-option"
            title="本月"
          >
            本月
          </span>
          <span
            class="kd-filter-body-condition-option"
            title="近三个月"
          >
            近三个月
          </span>
          <span
            class="kd-filter-body-condition-option"
            title="近一年"
          >
            近一年
          </span>
          <span
            class="kd-filter-body-condition-option"
            title="自定义"
          >
            自定义
          </span>
          <span
            class="kd-filter-body-condition-option-customer"
          >
            <div
              class="kd-date-picker kd-date-picker-range kd-date-picker-middle"
              style="margin:-4px 0"
            >
              <div
                class="kd-date-picker-input kd-date-picker-input-active kd-date-picker-input-middle"
              >
                <input
                  placeholder="开始日期"
                  readonly=""
                  size="12"
                  value=""
                />
              </div>
              <div
                class="kd-date-picker-range-separator"
              >
                ~
              </div>
              <div
                class="kd-date-picker-input kd-date-picker-input-middle"
              >
                <input
                  placeholder="结束日期"
                  readonly=""
                  size="12"
                  value=""
                />
              </div>
              <div
                class="kd-date-picker-active-bar"
                style="left:-10px;width:0;position:absolute"
              />
              <span
                class="kd-date-picker-suffix"
              >
                <i
                  class="kdicon kdicon-date"
                />
              </span>
            </div>
          </span>
        </div>
        <div
          class="kd-filter-body-condition-addition"
        />
      </li>
    </ul>
    <ul
      class="kd-filter-body-scheme"
    >
      <li>
        <span
          class="kd-filter-body-scheme-label"
        >
          常用方案:
        </span>
        <ol
          class="kd-filter-body-scheme-list"
        >
          <li
            class="kd-filter-body-scheme-item"
          >
            我创建的
          </li>
          <li
            class="kd-filter-body-scheme-item"
          >
            我处理的
          </li>
          <li
            class="kd-filter-body-scheme-item"
          >
            我修复的
          </li>
          <li
            class="kd-filter-body-scheme-item"
          >
            我验证的
          </li>
        </ol>
      </li>
      <li>
        <span
          class="kd-filter-body-scheme-label"
        >
          高级查询：
        </span>
        <ol
          class="kd-filter-body-scheme-detail"
        >
          <li>
            <span
              class="kd-filter-body-scheme-detail-field"
            >
              发现时间
            </span>
            <span
              class="kd-filter-body-scheme-detail-operator"
            >
              <div
                class="kd-select"
                style="width:100%"
              >
                <span
                  class="kd-select-selector"
                  tabindex="0"
                >
                  <div
                    class="kd-select-bordered kd-select-size-middle kd-select-wrapper kd-select-single"
                  >
                    <span
                      class="kd-select-selection-search"
                    >
                      <input
                        class="kd-select-selection-search-input"
                        readonly=""
                        value=""
                      />
                    </span>
                    <span
                      class="kd-select-placeholder"
                    >
                      请输入需要搜索的内容
                    </span>
                    <span
                      class="kd-select-suffix"
                    >
                      <span
                        class="kd-select-icon-arrow kd-select-icon-arrow-down"
                      >
                        <i
                          class="kdicon kdicon-arrow-down"
                        />
                      </span>
                    </span>
                  </div>
                </span>
              </div>
            </span>
            <span
              class="kd-filter-body-scheme-detail-value"
            >
              <div
                class="kd-select"
                style="width:100%"
              >
                <span
                  class="kd-select-selector"
                  tabindex="0"
                >
                  <div
                    class="kd-select-bordered kd-select-size-middle kd-select-wrapper kd-select-single"
                  >
                    <span
                      class="kd-select-selection-search"
                    >
                      <input
                        class="kd-select-selection-search-input"
                        readonly=""
                        value=""
                      />
                    </span>
                    <span
                      class="kd-select-placeholder"
                    >
                      请输入需要搜索的内容
                    </span>
                    <span
                      class="kd-select-suffix"
                    >
                      <span
                        class="kd-select-icon-arrow kd-select-icon-arrow-down"
                      >
                        <i
                          class="kdicon kdicon-arrow-down"
                        />
                      </span>
                    </span>
                  </div>
                </span>
              </div>
            </span>
            <span
              class="kd-filter-body-scheme-detail-and"
            >
              并且
            </span>
          </li>
          <li>
            <button
              class="kd-btn kd-btn-primary kd-btn-size-small kd-btn-background-ghost"
              click-animating-wave="false"
              type="button"
            >
              <i
                class="kdicon kdicon-add"
                style="vertical-align:top;margin-right:5px"
              />
              添加条件
            </button>
          </li>
        </ol>
      </li>
    </ul>
  </div>
</div>
`;

exports[`Filter renders correctly 5`] = `
<div
  class="kd-filter"
>
  <header
    class="kd-filter-header"
  >
    <h3
      class="kd-filter-header-title"
    >
      Filter Test
    </h3>
    <div
      class="kd-filter-header-condition"
    >
      <span
        class="kd-filter-header-condition-label"
      >
        筛选条件
      </span>
      <div
        class="kd-space kd-space-horizontal kd-space-align-center kd-space-wrap"
        style="--cgap:4px;--rgap:4px"
      />
    </div>
    <div
      class="kd-quick-search kd-filter-header-search"
    >
      <span
        class="kd-quick-search-prefix"
      >
        <i
          class="kdicon kdicon-search"
        />
      </span>
      <div
        class="kd-quick-search-selector"
      >
        <div
          class="kd-quick-search-selection-overflow"
        >
          <span
            class="kd-quick-search-selection-placeholder"
          >
            请输入需要搜索的内容
          </span>
          <div
            class="kd-quick-search-selection-search"
            style="width:4px"
          >
            <input
              class="kd-quick-search-input"
              value=""
            />
            <span
              class="kd-quick-search-selection-search-mirror"
            >
               
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="kd-filter-header-handle"
    >
      展开过滤 
      <i
        class="kdicon kdicon-arrow-down"
      />
    </div>
  </header>
  <div
    class="kd-filter-body"
  >
    <div
      class="kd-space kd-filter-body-tabs kd-space-horizontal kd-space-align-center"
      style="--cgap:12px"
    >
      <span
        class="kd-filter-body-tabs-item active"
      >
        常用条件
      </span>
      <span
        class="kd-filter-body-tabs-split"
      />
      <span
        class="kd-filter-body-tabs-item"
      >
        方案查询
      </span>
    </div>
    <ul
      class="kd-filter-body-conditions active"
    >
      <li
        class="kd-filter-body-condition"
      >
        <span
          class="kd-filter-body-condition-label"
        >
          组织:
        </span>
        <div
          class="kd-filter-body-condition-options"
        >
          <span
            class="kd-filter-body-condition-option"
            title="环球日化深圳销售部"
          >
            环球日化深圳销售部
          </span>
          <span
            class="kd-filter-body-condition-option"
            title="用户体验部"
          >
            用户体验部
          </span>
          <span
            class="kd-filter-body-condition-option"
            title="前端开发项目部"
          >
            前端开发项目部
          </span>
          <span
            class="kd-filter-body-condition-option"
            title="环球集团广州销售部"
          >
            环球集团广州销售部
          </span>
        </div>
        <div
          class="kd-filter-body-condition-addition"
        />
      </li>
      <li
        class="kd-filter-body-condition"
      >
        <span
          class="kd-filter-body-condition-label"
        >
          缺陷状态:
        </span>
        <div
          class="kd-filter-body-condition-options"
        >
          <span
            class="kd-filter-body-condition-option active"
          >
            不限
          </span>
          <span
            class="kd-filter-body-condition-option"
            title="● 计划"
          >
            ● 计划
          </span>
          <span
            class="kd-filter-body-condition-option"
            title="● 待修复"
          >
            ● 待修复
          </span>
          <span
            class="kd-filter-body-condition-option"
            title="● 阻塞"
          >
            ● 阻塞
          </span>
          <span
            class="kd-filter-body-condition-option"
            title="● 修复中"
          >
            ● 修复中
          </span>
          <span
            class="kd-filter-body-condition-option"
            title="● 修复完成"
          >
            ● 修复完成
          </span>
          <span
            class="kd-filter-body-condition-option"
            title="● 验证通过"
          >
            ● 验证通过
          </span>
          <span
            class="kd-filter-body-condition-option"
            title="● 失效"
          >
            ● 失效
          </span>
          <span
            class="kd-filter-body-condition-option"
            title="● 下版处理"
          >
            ● 下版处理
          </span>
          <span
            class="kd-filter-body-condition-option"
            title="status9"
          >
            status9
          </span>
          <span
            class="kd-filter-body-condition-option"
          />
          <span
            class="kd-filter-body-condition-option"
            title="● 已转需求"
          >
            ● 已转需求
          </span>
        </div>
        <div
          class="kd-filter-body-condition-addition"
        />
      </li>
      <li
        class="kd-filter-body-condition"
      >
        <span
          class="kd-filter-body-condition-label"
        >
          项目组:
        </span>
        <div
          class="kd-filter-body-condition-options"
        >
          <span
            class="kd-filter-body-condition-option"
            title="DataOne大数据平台项目组"
          >
            DataOne大数据平台项目组
          </span>
          <span
            class="kd-filter-body-condition-option"
            title="数据智能项目组"
          >
            数据智能项目组
          </span>
          <span
            class="kd-filter-body-condition-option"
            title="IKD"
          >
            IKD
          </span>
          <span
            class="kd-filter-body-condition-option"
            title="统一平台"
          >
            统一平台
          </span>
          <span
            class="kd-filter-body-condition-option"
            title="KDesign-前端组件库"
          >
            KDesign-前端组件库
          </span>
          <span
            class="kd-filter-body-condition-option"
            title="流程服务项目组"
          >
            流程服务项目组
          </span>
          <span
            class="kd-filter-body-condition-option"
            title="云架构项目组"
          >
            云架构项目组
          </span>
          <span
            class="kd-filter-body-condition-option"
            title="轻分析项目组"
          >
            轻分析项目组
          </span>
          <span
            class="kd-filter-body-condition-option"
            title="前端技术项目组"
          >
            前端技术项目组
          </span>
          <span
            class="kd-filter-body-condition-option"
            title="基础数据项目组"
          >
            基础数据项目组
          </span>
          <span
            class="kd-filter-body-condition-option"
            title="集成服务项目组"
          >
            集成服务项目组
          </span>
          <span
            class="kd-filter-body-condition-option"
            title="税务管理项目组"
          >
            税务管理项目组
          </span>
          <span
            class="kd-filter-body-condition-option"
            title="产品总监项目组"
          >
            产品总监项目组
          </span>
          <span
            class="kd-filter-body-condition-option"
            title="发票云项目组"
          >
            发票云项目组
          </span>
          <span
            class="kd-filter-body-condition-option"
            title="物联网应用项目组"
          >
            物联网应用项目组
          </span>
          <span
            class="kd-filter-body-condition-option"
            title="IIoT平台项目组"
          >
            IIoT平台项目组
          </span>
          <span
            class="kd-filter-body-condition-option"
            title="项目赋能组"
          >
            项目赋能组
          </span>
          <span
            class="kd-filter-body-condition-option"
            title="渠道云项目组"
          >
            渠道云项目组
          </span>
          <span
            class="kd-filter-body-condition-option"
            title="电商云项目组"
          >
            电商云项目组
          </span>
          <span
            class="kd-filter-body-condition-option"
            title="开放平台项目组"
          >
            开放平台项目组
          </span>
        </div>
        <div
          class="kd-filter-body-condition-addition"
        />
      </li>
      <li
        class="kd-filter-body-condition"
      >
        <span
          class="kd-filter-body-condition-label"
        >
          日期:
        </span>
        <div
          class="kd-filter-body-condition-options"
        >
          <span
            class="kd-filter-body-condition-option active"
          >
            不限
          </span>
          <span
            class="kd-filter-body-condition-option"
            title="今天"
          >
            今天
          </span>
          <span
            class="kd-filter-body-condition-option"
            title="本周"
          >
            本周
          </span>
          <span
            class="kd-filter-body-condition-option"
            title="本月"
          >
            本月
          </span>
          <span
            class="kd-filter-body-condition-option"
            title="近三个月"
          >
            近三个月
          </span>
          <span
            class="kd-filter-body-condition-option"
            title="近一年"
          >
            近一年
          </span>
          <span
            class="kd-filter-body-condition-option"
            title="自定义"
          >
            自定义
          </span>
          <span
            class="kd-filter-body-condition-option-customer"
          >
            <div
              class="kd-date-picker kd-date-picker-range kd-date-picker-middle"
              style="margin:-4px 0"
            >
              <div
                class="kd-date-picker-input kd-date-picker-input-active kd-date-picker-input-middle"
              >
                <input
                  placeholder="开始日期"
                  readonly=""
                  size="12"
                  value=""
                />
              </div>
              <div
                class="kd-date-picker-range-separator"
              >
                ~
              </div>
              <div
                class="kd-date-picker-input kd-date-picker-input-middle"
              >
                <input
                  placeholder="结束日期"
                  readonly=""
                  size="12"
                  value=""
                />
              </div>
              <div
                class="kd-date-picker-active-bar"
                style="left:-10px;width:0;position:absolute"
              />
              <span
                class="kd-date-picker-suffix"
              >
                <i
                  class="kdicon kdicon-date"
                />
              </span>
            </div>
          </span>
        </div>
        <div
          class="kd-filter-body-condition-addition"
        />
      </li>
    </ul>
    <ul
      class="kd-filter-body-scheme"
    >
      <li>
        <span
          class="kd-filter-body-scheme-label"
        >
          常用方案:
        </span>
        <ol
          class="kd-filter-body-scheme-list"
        >
          <li
            class="kd-filter-body-scheme-item"
          >
            我创建的
          </li>
          <li
            class="kd-filter-body-scheme-item"
          >
            我处理的
          </li>
          <li
            class="kd-filter-body-scheme-item"
          >
            我修复的
          </li>
          <li
            class="kd-filter-body-scheme-item"
          >
            我验证的
          </li>
        </ol>
      </li>
      <li>
        <span
          class="kd-filter-body-scheme-label"
        >
          高级查询：
        </span>
        <ol
          class="kd-filter-body-scheme-detail"
        >
          <li>
            <span
              class="kd-filter-body-scheme-detail-field"
            >
              发现时间
            </span>
            <span
              class="kd-filter-body-scheme-detail-operator"
            >
              <div
                class="kd-select"
                style="width:100%"
              >
                <span
                  class="kd-select-selector"
                  tabindex="0"
                >
                  <div
                    class="kd-select-bordered kd-select-size-middle kd-select-wrapper kd-select-single"
                  >
                    <span
                      class="kd-select-selection-search"
                    >
                      <input
                        class="kd-select-selection-search-input"
                        readonly=""
                        value=""
                      />
                    </span>
                    <span
                      class="kd-select-placeholder"
                    >
                      请输入需要搜索的内容
                    </span>
                    <span
                      class="kd-select-suffix"
                    >
                      <span
                        class="kd-select-icon-arrow kd-select-icon-arrow-down"
                      >
                        <i
                          class="kdicon kdicon-arrow-down"
                        />
                      </span>
                    </span>
                  </div>
                </span>
              </div>
            </span>
            <span
              class="kd-filter-body-scheme-detail-value"
            >
              <div
                class="kd-select"
                style="width:100%"
              >
                <span
                  class="kd-select-selector"
                  tabindex="0"
                >
                  <div
                    class="kd-select-bordered kd-select-size-middle kd-select-wrapper kd-select-single"
                  >
                    <span
                      class="kd-select-selection-search"
                    >
                      <input
                        class="kd-select-selection-search-input"
                        readonly=""
                        value=""
                      />
                    </span>
                    <span
                      class="kd-select-placeholder"
                    >
                      请输入需要搜索的内容
                    </span>
                    <span
                      class="kd-select-suffix"
                    >
                      <span
                        class="kd-select-icon-arrow kd-select-icon-arrow-down"
                      >
                        <i
                          class="kdicon kdicon-arrow-down"
                        />
                      </span>
                    </span>
                  </div>
                </span>
              </div>
            </span>
            <span
              class="kd-filter-body-scheme-detail-and"
            >
              并且
            </span>
          </li>
          <li>
            <button
              class="kd-btn kd-btn-primary kd-btn-size-small kd-btn-background-ghost"
              click-animating-wave="false"
              type="button"
            >
              <i
                class="kdicon kdicon-add"
                style="vertical-align:top;margin-right:5px"
              />
              添加条件
            </button>
          </li>
        </ol>
      </li>
    </ul>
  </div>
</div>
`;
